# elva

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  ruff.toml
docs/: app-guide.md  changelog.md  developer-guide.md  idea.md  index.md  plan.md  user-guide.md  user-stories.md  y-feature-comparison.tsv
docs/css/: extra.css  mkdocs-material.css  mkdocstrings.css
docs/stories/: how-to-not-write-textual-apps.md  index.md  indexing-y-crdts.md  write-a-realtime-editor.md  writing-a-textual-application-repl.md
docs/stories/posts/: about-strings-in-python-unicode-code-points-and-grapheme-clusters.md  how-to-not-write-textual-apps.md  indexing-in-y-crdts.md  indexing-y-crdts.md  set-up-logging.md  write-a-realtime-editor.md  writing-a-textual-application-repl.md
elva/: Dockerfile  _version.py  auth.py  base.py  cli.py  click_lazy_group.py  click_utils.py  client.py  component.py  connections.py  debug.py  elva-websocket-server.py  elva.toml  log.py  logging_config.py  metaprovider.py  parser.py  protocol.py  provider.py  providers.py  render.py  renderer.py  server.py  service.py  store.py  utils.py  websocket-server.py  websocket_server.py
elva/apps/: base.py  chat.py  chat.tcss  drive.py  editor.py  editor.tcss  server.py  service.py  tree.py
elva/providers/: connection.py  provider.py
elva/server_data/: foo.y
examples/aio/: aiowatch-threadsafe.py  coro-or-thread.py
examples/client1/: test.y
examples/file-transfer/: client1.py  client2.py  server.py
examples/repl/: repl-cmd.py  repl.py
examples/websocket/: websocket-client.py  websocket-receiver.py  websocket-server.py
examples/y-crdt/: client.py  server.py
experiments/: simple-client.py  simple-server.py  test-component.py  test-config-screen.py  test-document.py  test-emoji.py  test-events.py  test-textual-app.py  test-ui.py  test-websocket-providers.py  test-websockethandler.py  test-websockets.py  test-ytextarea-widget.py
git/hooks/: pre-commit
hooks/: pre-commit
logo/: README.md  logo.py
src/elva/: auth.py  awareness.py  cli.py  click_lazy_group.py  click_utils.py  component.py  config.py  core.py  document.py  files.py  log.py  main.py  parser.py  protocol.py  provider.py  renderer.py  server.py  store.py  tls.py  utils.py
src/elva/apps/: chat.py  chat.tcss  editor.py  editor.tcss  server.py  service.py
src/elva/apps/chat/: app.py  cli.py  style.tcss
src/elva/apps/editor/: app.py  cli.py  style.tcss
src/elva/apps/server/: app.py  cli.py
src/elva/cli/: __init__.py  auth.py  basis.py  integration.py
src/elva/commands/basic/: cli.py
src/elva/commands/chat/: app.py  cli.py
src/elva/commands/config/: cli.py
src/elva/commands/connect/: __init__.py  cli.py
src/elva/commands/context/: cli.py
src/elva/commands/editor/: app.py  cli.py  style.tcss
src/elva/commands/log/: cli.py
src/elva/commands/render/: cli.py
src/elva/commands/room/: __init__.py  app.py  cli.py
src/elva/commands/server/: app.py  cli.py
src/elva/commands/tls/: cli.py
src/elva/commands/user/: cli.py
src/elva/widgets/: __init__.py  awareness.py  config.py  screens.py  status.py  textarea.py  ytextarea.py
src/elva/widgets/ytextarea/: __init__.py  location.py  selection.py  widget.py
tests/: test_auth.py  test_awareness.py  test_cli.py  test_component.py  test_config.py  test_cross_sync.py  test_document.py  test_new_document.py  test_parser.py  test_protocol.py  test_provider.py  test_renderer.py  test_room_browser.py  test_server.py  test_store.py  test_tls.py
tests/widgets/: test_selection.py  test_update_location.py
tests/widgets/ytextarea/: test_widget.py
