[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elva"
description = "A suite of local-first TUI realtime collaboration apps based on CRDTs."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "real time",
  "real-time",
  "realtime",
  "collaboration",
  "sync",
  "crdt",
  "y-crdt",
  "yjs",
  "yrs",
  "suite",
  "local",
  "local-first",
  "tui",
  "text",
  "terminal",
]
authors = [
  { name = "ELVA Team", email = "elva@innocampus.tu-berlin.de" },
]
maintainers = [
  { name = "Jakob Zahn", email = "jakob.zahn@mailbox.org" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "websockets",
    "pycrdt",
    "pycrdt-websocket",
    "anyio",
    "click",
    "rich",
    "emoji",
    "python-json-logger",
    "watchdog",
    "ldap3",
    "textual[syntax]",
    "tree-sitter-language-pack",
    "pyperclip",
    "qrcode",
    "tomli-w",
    "tomli",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "trio",
    "ruff",
    "isort",
    "build",
    "setuptools-scm",
    "tox",
    "twine",
    "mkdocs",
    "mkdocstrings",
    "textual-dev",
    "git-cliff",
    "mkdocs-terminal",
    "mkdocs-material",
    "mkdocstrings-python",
]

# TODO complete url list
#[project.urls]
#Homepage = "https://url.to/homepage"
#Issues = "https://url.to/issues"
#Documentation = "https://url.to/docs"
#Repository = "https://url.to/repo"
#"Bug Tracker" = "https://url.to/bug-tracker"
#Changelog = "https://url.to/changelog"
logo = [
    "svg-py",
    "rdflib",
    "numpy",
]

[project.scripts]
elva = "elva.cli:elva"

[tool.pdm]
distribution = true

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pyinstrument",
]
