[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elva"
description = "A suite of local-first TUI realtime collaboration apps based on CRDTs."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "real time",
  "real-time",
  "realtime",
  "collaboration",
  "sync",
  "crdt",
  "y-crdt",
  "yjs",
  "yrs",
  "suite",
  "local",
  "local-first",
  "tui",
  "text",
  "terminal",
]
authors = [
  { name = "ELVA Team", email = "elva@innocampus.tu-berlin.de" },
]
maintainers = [
  { name = "Jakob Zahn", email = "jakob.zahn@mailbox.org" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "websockets>=13.1",
    "pycrdt>=0.9.8",
    "pycrdt-websocket>=0.14.2",
    "anyio>=4.4.0",
    "click>=8.1.7",
    "rich>=13.8.0",
    "emoji>=2.12.1",
    "python-json-logger>=2.0.7",
    "watchdog>=5.0.0",
    "ldap3>=2.9.1",
    "textual[syntax]>=0.82.0",
    "tree-sitter-language-pack",
    "pyperclip>=1.9.0",
    "qrcode>=8.0",
    "tomli-w>=1.1.0",
    "tomli>=1.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "trio>=0.26.2",
    "ruff>=0.6.3",
    "isort>=5.13.2",
    "build>=1.2.1",
    "setuptools-scm>=8.1.0",
    "tox>=4.18.0",
    "twine>=5.1.1",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.25.2",
    "textual-dev>=1.5.1",
    "git-cliff>=2.7.0",
]

# TODO complete url list
#[project.urls]
#Homepage = "https://url.to/homepage"
#Issues = "https://url.to/issues"
#Documentation = "https://url.to/docs"
#Repository = "https://url.to/repo"
#"Bug Tracker" = "https://url.to/bug-tracker"
#Changelog = "https://url.to/changelog"
logo = [
    "svg-py",
    "rdflib",
    "numpy",
]

[project.scripts]
elva = "elva.cli:elva"

[tool.pdm]
distribution = true

[tool.setuptools_scm]
